Update Timeline panel some more, improve usage